# MIDI2NoteCombo

./: .gitignore  PRD.md  README.md  build_gm_similarity.py  build_mc_db.py  cover_engine.py  hallucination_atop_a_bivalve.mid  instruments.py  midi2notecombo.py  midi_parser.py  mix_optimizer.py  nbs_pitch.py  pyproject.toml  recommender.py  result.json  utils.py
db/: README.md
samples/: README.md
